Add -XX:+PrintReferenceGC logging and -XX:+PrintGCCause analysis.